--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "sass": "^1.58.0"
   }
 }
