--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "ludo",
+  "homepage": "http://michudud.github.io/Ludo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,6 +24,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.1",
+    "gh-pages": "^5.0.0",
     "parcel": "^2.8.3",
     "prettier": "^2.8.3",
     "process": "^0.11.10"
