--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "homepage": "http://michudud.github.io/Ludo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
+    "build": "parcel build src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,7 +24,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.1",
     "gh-pages": "^5.0.0",
-    "parcel": "^2.8.3",
+    "parcel": "^2.9.1",
     "prettier": "^2.8.3",
     "process": "^0.11.10"
   },
